# codex-together

./: CODEX-TOGETHER.md  README.md  plan.md  todo.txt
.codex/context/concepts/: summarize-this-branch-in-one-sentence.md
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: codex.rs  contextual_user_message.rs  event_mapping.rs  features.rs
codex-rs/core/src/codex/: rollout_reconstruction.rs  rollout_reconstruction_tests.rs
codex-rs/protocol/src/: items.rs  protocol.rs
codex-rs/state/migrations/: 0019_together.sql  0020_together_indexes.sql
codex-rs/state/src/: lib.rs  runtime.rs
codex-rs/state/src/model/: mod.rs  together.rs
codex-rs/state/src/runtime/: together.rs
codex-rs/together-client/: Cargo.toml
codex-rs/together-client/src/: lib.rs
codex-rs/together-protocol/: Cargo.toml
codex-rs/together-protocol/src/: lib.rs
codex-rs/together-server/: Cargo.toml
codex-rs/together-server/src/: lib.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  history_cell.rs  lib.rs  slash_command.rs
codex-rs/tui/src/bottom_pane/: bottom_pane_view.rs  chat_composer.rs  chat_composer_history.rs  list_selection_view.rs  mod.rs  slash_commands.rs  status_line_setup.rs  together_center_view.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__chat_composer__tests__context_popup.snap  codex_tui__bottom_pane__chat_composer__tests__input_disabled_together_checkout.snap
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/src/chatwidget/snapshots/: codex_tui__chatwidget__tests__render_lineage_tree_includes_ancestors_and_marks_focused_thread.snap  codex_tui__chatwidget__tests__together_context_view.snap  (+4 more)
codex-rs/tui/src/snapshots/: codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
