[package]
name = "codex-together-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_together_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
codex-together-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
