[package]
name = "codex-together-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_together_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
