[package]
name = "codex-together-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_together_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
base64 = { workspace = true }
chrono = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
codex-state = { workspace = true }
codex-together-protocol = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
